welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini = true) {
            ^